--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,9 +20,9 @@ services:
       retries: 10
     restart: always
     environment:
-      POSTGRES_PASSWORD: 12345
-      POSTGRES_USER: admin
-      POSTGRES_DB: password_manager
+      - POSTGRES_PASSWORD=12345
+      - POSTGRES_USER=admin
+      - POSTGRES_DB=password_manager
     ports:
       - "5432:5432"
     container_name: postgres
